# ielts-script2audio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/voice_maps/: cosyvoice3_from_kokoro_part1.json  kokoro_en_gb_part1.json  kokoro_en_gb_part3.json  kokoro_voice_inventory.json  orpheus_en_part1.json  orpheus_voice_inventory.json
docs/: architecture-principles.md  ielts-audio-rules.md  product-goal.md  roadmap.md
docs/decisions/: ADR-0001-implementation-language.md  ADR-0002-tts-adapter-boundary.md  README.md
docs/prompts/: system-control.md
docs/research/: README.md  candidates-parler-orpheus-melo-voxtral.md  candidates-qwen-fish-chatterbox-fixed-voice.md  deployment-constraints.md  tts-benchmark-plan.md  tts-candidates.md  tts-evaluation-criteria.md  tts-requirements.md  tts-shortlist.md  voice-inventory-deep-dive.md
docs/schemas/: input-transcript-stage1.md
examples/: README.md  part1_invalid_speaker_count.json  part1_valid.json  part2_valid.json  part3_valid.json  part4_valid.json
notebooks/: colab_build_cosyvoice_refs_from_kokoro.ipynb  colab_cosyvoice3_manifest_lab.ipynb  colab_kokoro_manifest_lab.ipynb  colab_orpheus_manifest_lab.ipynb
scripts/: lab_build_cosyvoice_refs_from_kokoro.py  lab_concat_segment_wavs.py  lab_render_kokoro_from_manifest.py  lab_render_orpheus_from_manifest.py  lab_show_segment_tracking.py  lab_survey_kokoro_voices.py  lab_survey_orpheus_voices.py
src/ielts_script2audio/: __init__.py  cli.py
tests/: test_cli.py  test_cli_prepare.py  test_prepare_pipeline.py  test_validate_transcript.py
(+22 files in other folders)
