[project]
name = "ielts-script2audio"
version = "0.1.0"
description = "Provider-neutral IELTS-style Listening transcript → TTS-ready pipeline (control plane)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ielts-s2a = "ielts_script2audio.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
